--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ratatui = "0.28"
+crossterm = "0.27"
+chrono = { version = "0.4", features = ["serde"] }
+dirs = "5.0"
+serde = { version = "1.0", features = ["derive"] }
