--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ crossterm = "0.27"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "5.0"
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+tempfile = "3.8"
