--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ crossterm = "0.27"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "5.0"
 serde = { version = "1.0", features = ["derive"] }
+slint = "1.8"
+clap = { version = "4.0", features = ["derive"] }
+
+[build-dependencies]
+slint-build = "1.8"
 
 [dev-dependencies]
 tempfile = "3.8"
